--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "apm",
+  "name": "cpm",
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve -o",
-    "build": "ng build",
+    "build": "ng build --prod",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e"
@@ -23,7 +23,9 @@
     "font-awesome": "4.7.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "zone.js": "~0.10.3",
+    "express": "4.17.1"
+
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.3",
